Remove intellij plugin dependency for UI tests